Add Support for Lower Case Project Name

--- a/Templates/wordpress.style.css
+++ b/Templates/wordpress.style.css
@@ -2,6 +2,6 @@
  Theme Name:  ThemeName
  Author:      author
  Template:    digitalzenworks
- Text Domain: ThemeName
+ Text Domain: ThemeDomain
  Version:     1.0.1
 */
